--- a/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.csproj
+++ b/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.csproj
@@ -223,6 +223,15 @@
   <ItemGroup>
     <Resource Include="Resources\status_ques.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\logo.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\login.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\dtuview.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
