--- a/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.csproj
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.csproj
@@ -193,6 +193,15 @@
   <ItemGroup>
     <Resource Include="Resources\userdisc.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\logo.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\login.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\configuration.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
