--- a/SunRain/ManagementSystem/InformationTransferLibrary/InformationTransferLibrary.csproj
+++ b/SunRain/ManagementSystem/InformationTransferLibrary/InformationTransferLibrary.csproj
@@ -76,6 +76,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.xaml.cs">
+      <DependentUpon>About.xaml</DependentUpon>
+    </Compile>
     <Compile Include="InformationTransferLibrary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TerminalInformationUC.xaml.cs">
@@ -109,10 +112,20 @@
     <Resource Include="Resources\dtuon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="About.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="TerminalInformationUC.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\bottom_logo.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\logo.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
