--- a/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.csproj
+++ b/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.csproj
@@ -43,6 +43,9 @@
     <ApplicationIcon>terminalmanagementsystem.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EncryptDecryptLibrary">
+      <HintPath>.\EncryptDecryptLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>True</Private>
     </Reference>
