--- a/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.csproj
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.csproj
@@ -43,6 +43,9 @@
     <ApplicationIcon>configuration.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EncryptDecryptLibrary">
+      <HintPath>.\EncryptDecryptLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>True</Private>
     </Reference>
