--- a/SunRain/ManagementSystem/SystemService/SystemService.csproj
+++ b/SunRain/ManagementSystem/SystemService/SystemService.csproj
@@ -38,6 +38,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EncryptDecryptLibrary">
+      <HintPath>.\EncryptDecryptLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>True</Private>
     </Reference>
