--- a/SunRain/ManagementSystem/InformationTransferLibrary/InformationTransferLibrary.csproj
+++ b/SunRain/ManagementSystem/InformationTransferLibrary/InformationTransferLibrary.csproj
@@ -83,10 +83,16 @@
     <Compile Include="About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View4DTUsUC.xaml.cs">
+      <DependentUpon>View4DTUsUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="InformationTransferLibrary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TerminalInformationUC.xaml.cs">
       <DependentUpon>TerminalInformationUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View2DTUsUC.xaml.cs">
+      <DependentUpon>View2DTUsUC.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -120,9 +126,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="View4DTUsUC.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="TerminalInformationUC.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View2DTUsUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
