Part 2 : Msg Log

--- a/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.csproj
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.csproj
@@ -90,6 +90,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewUserMsgLog.xaml.cs">
+      <DependentUpon>ViewUserMsgLog.xaml</DependentUpon>
+    </Compile>
     <Page Include="DeleteServerLog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -137,6 +140,10 @@
       <DependentUpon>ServiceConfiguration.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ViewUserMsgLog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
