--- a/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.csproj
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Data">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
       <Private>True</Private>
     </Reference>
@@ -256,6 +257,14 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\viewlog.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\logfileerror.ico" />
+    <Resource Include="Resources\logfileok.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\fromdtu.ico" />
+    <Resource Include="Resources\todtu.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
