--- a/SunRain/ManagementSystem/SystemService/SystemService.csproj
+++ b/SunRain/ManagementSystem/SystemService/SystemService.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -108,8 +108,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>xcopy /y /d $(OutDir)\..\..\..\..\..\MSIProject\version.txt $(OutDir)\..\..\
+xcopy /y /d $(OutDir)\..\..\..\..\..\MSIProject\install.dat $(OutDir)\..\..\</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
