--- a/SunRain/ManagementSystem/TerminalConfiguration/TerminalConfiguration.csproj
+++ b/SunRain/ManagementSystem/TerminalConfiguration/TerminalConfiguration.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -181,6 +181,10 @@
     <Resource Include="Resources\bottom_logo.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /y /d $(OutDir)\..\..\..\..\..\MSIProject\version.txt $(OutDir)\..\..\
+xcopy /y /d $(OutDir)\..\..\..\..\..\MSIProject\install.dat $(OutDir)\..\..\</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
